# promway-rescue

./: .gitignore  README.md  build.sh  manage.py  pyproject.toml
dogs/: admin.py  models.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_event.py
dogs/templates/: master.html
dogs/templates/dogs/: adoptable.html  details.html  index.html
dogs/templatetags/: rescue_tags.py
promway_rescue/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
theme/: package-lock.json  package.json
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
